<resources>
    <string name="app_name">GO SOPT Android</string>

    <string name="login_title">Welcome to GO Android !</string>
    <string name="login_id">ID</string>
    <string name="prompt_login_id">아이디를 입력하세요.</string>
    <string name="login_pw">PW</string>
    <string name="prompt_login_pw">비밀번호를 입력하세요.</string>
    <string name="login_submit">LOGIN</string>
    <string name="login_empty">아이디 또는 비밀번호를 입력해주세요</string>
    <string name="login_fail">아이디 또는 비밀번호를 잘못 입력했습니다</string>
    <string name="login_success">로그인에 성공했습니다!</string>
    <string name="go_to_signup">SIGN UP</string>

    <string name="signup_title">SIGNUP</string>
    <string name="signup_id">ID</string>
    <string name="prompt_signup_id">아이디를 입력하세요</string>
    <string name="signup_pw">PW</string>
    <string name="prompt_signup_pw">비밀번호를 입력하세요</string>
    <string name="signup_name">이름</string>
    <string name="prompt_signup_name">이름을 입력하세요</string>
    <string name="signup_specialty">특기</string>
    <string name="prompt_signup_specialty">특기를 입력하세요</string>
    <string name="signup_submit">회원가입 완료</string>
    <string name="signup_id_fail">아이디를 6–10글자 사이로 설정하세요</string>
    <string name="signup_pw_fail">비밀번호를 8–12글자 사이로 설정하세요</string>
    <string name="signup_success">회원가입에 성공했습니다!</string>

    <string name="profile_name">이름 :&#160;</string>
    <string name="profile_specialty">특기 :&#160;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_follower_list">팔로워</string>
    <string name="menu_gallery">갤러리</string>
    <string name="menu_search">검색</string>
    <string name="menu_my_page">내 정보</string>

    <string name="follower_name">Jasmine</string>
    <string name="follower_email">tnals08019@gmail.com</string>
    <string name="follower_list_header">Follower List</string>
    <string name="follower_item_delete">언팔로우</string>
</resources>