<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUpActivity">

    <TextView
        android:id="@+id/tv_signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signup_title"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/signup_id"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_title" />

    <EditText
        android:id="@+id/et_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_signup_id"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />

    <TextView
        android:id="@+id/tv_signup_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_pw"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_id" />

    <EditText
        android:id="@+id/et_signup_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_signup_pw"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw" />

    <TextView
        android:id="@+id/tv_signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_pw" />

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_signup_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_name" />

    <TextView
        android:id="@+id/tv_signup_ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_ability"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />

    <EditText
        android:id="@+id/et_signup_mbti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_signup_ability"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_ability" />

    <Button
        android:id="@+id/btn_signup_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_submit"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_mbti"
        app:layout_constraintStart_toStartOf="@+id/et_signup_mbti"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_mbti" />

</androidx.constraintlayout.widget.ConstraintLayout>